--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@
 .display-image {
     width: 844px;
     height: 881px;
+    border-left: 2px solid #eee;
+    border-right: 2px solid #eee;
 }
 
 /* second column Show display image end */
@@ -87,6 +89,7 @@
     justify-content: start;
     gap: 24px;
     padding: 12px 24px;
+    height: 881px;
 
 }
 
@@ -94,7 +97,7 @@
 .image-details-column table {
     width: 100%;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     font-family: "Nunito Sans", sans-serif;
 }
@@ -227,9 +230,26 @@
     border: 2px solid transparent;
 }
 
+/* image-info */
+.image-info {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    text-transform: uppercase;
+    font-size: 16px;
+}
 
+.image-info .image-info-title {
+    font-size: 18px;
+    color: #9B9E6B;
+    font-weight: 400;
+    font-family: "Nunito Sans", sans-serif;
 
+}
 
+.image-info-notice {
+    text-transform: none;
+}
 
 
 
