--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@
 /* second column Show display image start */
 .show-image-column {
     width: 100%;
+    position: relative;
 }
 
 .display-image {
@@ -71,6 +72,67 @@
     border-right: 2px solid #eee;
 }
 
+.show-image-column .view-in-room {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    padding: 10px 25px;
+    font-family: "Nunito Sans", sans-serif;
+    text-transform: uppercase;
+    border-radius: 50px;
+    color: #939859;
+}
+
+.full-screen-icon {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 40px;
+    height: 40px;
+    background-color: #E7E7E9;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+.full-screen-icon img {
+    width: 100%;
+    height: 100%;
+}
+
+/* prev next button */
+.prev-and-next-button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 166px;
+    height: 67px;
+    position: absolute;
+    bottom: 24px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.deg368-image {
+    width: 70px;
+    height: 67px;
+}
+
+.deg368-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.prev-and-next-button button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+.prev-and-next-button button i {
+    font-size: 20px;
+    color: #747375;
+}
 /* second column Show display image end */
 
 /* third column Content box and color list start */
@@ -251,8 +313,42 @@
     text-transform: none;
 }
 
+/* icons */
 
+.details-page-icons {
+    display: flex;
+    gap: 12px;
+    justify-content: start;
+    align-items: center;
+}
 
+.details-page-icons .icons {
+    background-color: #93975F;
+    width: 50px;
+    height: 50px;
+    border-radius: 6px;
+}
 
+.details-page-icons .icons i {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 25px;
+}
+
+.social-group {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.social-group p {
+    font-size: 18px;
+    font-family: "Nunito Sans", sans-serif;
+
+}
 
 /* third column Content box and color list end  */
