--- a/style.css
+++ b/style.css
@@ -373,7 +373,8 @@
 .image-info {
     display: flex;
     flex-direction: column;
-    gap: 14px;
+    justify-content: space-between;
+    gap: 10px;
     text-transform: uppercase;
     font-size: 17px;
 }
@@ -383,7 +384,7 @@
     color: #9B9E6B;
     font-weight: 400;
     font-family: "Nunito Sans", sans-serif;
-
+    padding-bottom: 16px;
 }
 
 .image-info-notice {
