--- a/style.css
+++ b/style.css
@@ -1,432 +1,540 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
-    max-width: 1512px;
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 20px;
-
+  max-width: 1512px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 .container .div {
-    margin: 0px 12px;
-    border-top: 1px solid #E2E2E3;
-
+  margin: 0px 12px;
+  border-top: 1px solid #e2e2e3;
 }
 
 /* common css */
 .horizontal-line {
-    width: calc(100% + 10px);
-    height: 1px !important;
-    background-color: #E2E2E3 !important;
-    overflow: hidden;
+  width: calc(100% + 10px);
+  height: 1px !important;
+  background-color: #e2e2e3 !important;
+  overflow: hidden;
 }
 
 /* grid */
 .lee-grid {
-    display: grid;
-    grid-template-columns: 1fr 8fr 3fr;
-    box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 8fr 3fr;
+  box-sizing: border-box;
 }
 
 /* first column image list start */
 .image-list-column {
-    width: calc(148px - 24px);
+  width: calc(148px - 24px);
 }
 
 .sidebarImage {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    padding: 12px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 12px 0px;
 }
 
 .sidebarImage .active {
-    border: 2px solid #929757;
-    border-radius: 5px;
+  border: 2px solid #929757;
+  border-radius: 5px;
 }
 
 .image-list {
-    width: 100px;
-    height: 100px;
-    background-color: #f7f8f8;
-    border-radius: 5px;
+  width: 100px;
+  height: 100px;
+  background-color: #f7f8f8;
+  border-radius: 5px;
 }
 
 .image-list img {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
+  /* width: 100%; */
+  height: 100%;
+  cursor: pointer;
 }
 
 /* first column image list end */
 
 /* second column Show display image start */
 .show-image-column {
-    width: 100%;
-    position: relative;
+  width: 100%;
+  position: relative;
 }
 
 .display-image {
-    width: 844px;
-    height: 881px;
-    border-left: 2px solid #eee;
-    border-right: 2px solid #eee;
+  max-width: 844px;
+  height: 881px;
+  border-left: 2px solid #eee;
+  border-right: 2px solid #eee;
 }
 
 .show-image-column .view-in-room {
-    position: absolute;
-    top: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #fff;
-    padding: 10px 25px;
-    font-family: "Nunito Sans", sans-serif;
-    text-transform: uppercase;
-    border-radius: 50px;
-    color: #939859;
-
+  position: absolute;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  padding: 10px 25px;
+  font-family: "Nunito Sans", sans-serif;
+  text-transform: uppercase;
+  border-radius: 50px;
+  color: #939859;
 }
 
 /* Add this to existing CSS file */
 
 .view-full-screen {
-    background-color: rgba(0, 0, 0, 0.692);
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
-    /* Hidden by default */
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.692);
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  /* Hidden by default */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
 }
 
 .show-full-screen-display-image {
-    position: relative;
-    max-width: 90%;
-    max-height: 90%;
-    width: 840px;
-    height: auto;
+  position: relative;
+  max-width: 90%;
+  max-height: 90%;
+  width: 840px;
+  height: auto;
 }
 
 .show-full-screen-display-image img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .close-full-screen-image {
-    position: absolute;
-    top: 10px;
-    right: -10%;
-    font-weight: bold;
-    cursor: pointer;
-    color: black;
-    background: rgba(255, 255, 255, 0.5);
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  right: -10%;
+  font-weight: bold;
+  cursor: pointer;
+  color: black;
+  background: rgba(255, 255, 255, 0.5);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 
 /* Add the full-screen class to style the image when in full-screen mode */
 .display-image.full-screen img {
-    width: 100vw;
-    height: 100vh;
-    object-fit: contain;
+  width: 100vw;
+  height: 100vh;
+  object-fit: contain;
 }
 
-
 .full-screen-icon {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    width: 40px;
-    height: 40px;
-    background-color: #E7E7E9;
-    padding: 8px;
-    border-radius: 5px;
-    cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  background-color: #e7e7e9;
+  padding: 8px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .full-screen-icon img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 /* prev next button */
 .prev-and-next-button {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 166px;
-    height: 67px;
-    position: absolute;
-    bottom: 24px;
-    left: 50%;
-    transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 166px;
+  height: 67px;
+  position: absolute;
+  bottom: 24px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .deg368-image {
-    width: 70px;
-    height: 67px;
+  width: 70px;
+  height: 67px;
 }
 
 .deg368-image img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .prev-and-next-button button {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .prev-and-next-button button i {
-    font-size: 20px;
-    color: #747375;
+  font-size: 20px;
+  color: #747375;
 }
-
+.mobile-next-and-prev-button-group {
+  display: none;
+}
 /* second column Show display image end */
 
 /* third column Content box and color list start */
 .display-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-
-
-
 
 .image-details-column {
-    width: 520px;
-    padding: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: start;
-    gap: 18px;
-    padding: 12px 24px;
-    height: 881px;
-
+  max-width: 520px;
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  gap: 18px;
+  padding: 12px 24px;
+  height: 881px;
 }
-
-
 
 /*  table style */
 .image-details-column table {
-    width: 100%;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: "Nunito Sans", sans-serif;
+  width: 100%;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 .image-details-column table .opacity-row {
-    opacity: 0;
+  opacity: 0;
 }
 
 .table-title {
-    color: #B1B48B;
+  color: #b1b48b;
 }
 
 .table-normal-text {
-    color: #5E4F2B;
+  color: #5e4f2b;
 }
-
-
 
 /* color palates style */
 .color-palates {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 10px;
-    text-align: center;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 10px;
+  text-align: center;
 }
 
 .color-palates .color-box {
-    width: 72px;
+  width: 72px;
 }
 
 .color-palates .color-box {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .color-palates .color-box .color {
-    width: 56px;
-    height: 56px;
-    border-radius: 100%;
-    margin: 0px auto;
-    cursor: pointer;
-
+  width: 56px;
+  height: 56px;
+  border-radius: 100%;
+  margin: 0px auto;
+  cursor: pointer;
 }
 
 .color-palates .color-box h2 {
-    font-size: 14px;
-    color: #929757;
-    font-family: "Nunito Sans", sans-serif;
-    font-weight: 400;
+  font-size: 14px;
+  color: #929757;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 400;
 }
 
 .color-box .active {
-    border: 2px solid #929757 !important;
-
+  border: 2px solid #929757 !important;
 }
 
 /* ALL BACKGROUND COLOR IN COLOR PLATES */
 .color-palates .Olive {
-    background-color: #4B4330 !important;
-
+  background-color: #4b4330 !important;
 }
 
 .color-palates .Camel {
-    background-color: #B5875C !important;
-    border: 2px solid transparent;
+  background-color: #b5875c !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Platinum-Grey {
-    background-color: #979CA0 !important;
-    border: 2px solid transparent;
+  background-color: #979ca0 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Oxblood {
-    background-color: #552D2E !important;
-    border: 2px solid transparent;
+  background-color: #552d2e !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Anthracite {
-    background-color: #302F34 !important;
-    border: 2px solid transparent;
+  background-color: #302f34 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Red {
-    background-color: #FA695E !important;
-    border: 2px solid transparent;
+  background-color: #fa695e !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Green {
-    background-color: #A3EF9C !important;
-    border: 2px solid transparent;
+  background-color: #a3ef9c !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Blue {
-    background-color: #60A9DA !important;
-    border: 2px solid transparent;
+  background-color: #60a9da !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Orange {
-    background-color: #EAB959 !important;
-    border: 2px solid transparent;
+  background-color: #eab959 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Yellow {
-    background-color: #F9F3C5 !important;
-    border: 2px solid transparent;
+  background-color: #f9f3c5 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Pink {
-    background-color: #DF7FC0 !important;
-    border: 2px solid transparent;
+  background-color: #df7fc0 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Maroon {
-    background-color: #984662 !important;
-    border: 2px solid transparent;
+  background-color: #984662 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Indigo {
-    background-color: #ADB8ED !important;
-    border: 2px solid transparent;
+  background-color: #adb8ed !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Magenta {
-    background-color: #DA62F2 !important;
-    border: 2px solid transparent;
+  background-color: #da62f2 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Tan {
-    background-color: #F5DBC1 !important;
-    border: 2px solid transparent;
+  background-color: #f5dbc1 !important;
+  border: 2px solid transparent;
 }
 
 .color-palates .Teal {
-    background-color: #487C7D !important;
-    border: 2px solid transparent;
+  background-color: #487c7d !important;
+  border: 2px solid transparent;
 }
 
 /* image-info */
 .image-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 10px;
-    text-transform: uppercase;
-    font-size: 17px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  text-transform: uppercase;
+  font-size: 17px;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 .image-info .image-info-title {
-    font-size: 18px;
-    color: #9B9E6B;
-    font-weight: 400;
-    font-family: "Nunito Sans", sans-serif;
-    padding-bottom: 16px;
+  font-size: 18px;
+  color: #9b9e6b;
+  font-weight: 400;
+  /* font-family: "Nunito Sans", sans-serif; */
+  padding-bottom: 16px;
 }
 
 .image-info-notice {
-    text-transform: none;
+  text-transform: none;
 }
 
 /* icons */
 
 .details-page-icons {
-    display: flex;
-    gap: 12px;
-    justify-content: start;
-    align-items: center;
+  display: flex;
+  gap: 12px;
+  justify-content: start;
+  align-items: center;
 }
 
 .details-page-icons .icons {
-    background-color: #93975F;
-    width: 50px;
-    height: 50px;
-    border-radius: 6px;
+  background-color: #93975f;
+  width: 50px;
+  height: 50px;
+  border-radius: 6px;
 }
 
 .details-page-icons .icons i {
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    font-size: 25px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 25px;
 }
 
 .social-group {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .social-group p {
-    font-size: 18px;
-    font-family: "Nunito Sans", sans-serif;
-
+  font-size: 18px;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 /* third column Content box and color list end  */
+@media screen and (min-width: 0px) and (max-width: 550px) {
+  .container .div {
+    margin: 0px 0px;
+    border-top: none;
+  }
+  .horizontal-line {
+    width: calc(100% - 48px);
+    margin: 0px auto;
+  }
+  .lee-grid {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
+  .image-list-column {
+    width: auto;
+    overflow: auto;
+  }
+
+  .sidebarImage {
+    display: flex;
+    flex-direction: row;
+    gap: 6px;
+    padding: 12px 24px;
+    /* width: 100%; */
+  }
+  .image-list {
+    width: 84px !important;
+    height: 84px !important;
+  }
+  .image-list img {
+    /* width: 100%; */
+    height: 100%;
+    overflow: scroll;
+    /* object-fit: cover; */
+  }
+  .full-screen-image {
+    padding: 8px 24px;
+  }
+  .display-image {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+  }
+  .mobile-next-and-prev-button-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+  }
+  .mobile-next-and-prev-button-group button  {
+    border: none;
+    background-color: #E2E2E4;
+    width: 24px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #83838A;
+  }
+  .mobile-next-and-prev-button-group #prevButtonMobile{
+    border-radius: 0px 5px 5px 0px;
+  }
+  .mobile-next-and-prev-button-group #nextButtonMobile{
+    border-radius: 5px 0px 0px 5px;
+  }
+  .view-in-room {
+    display: none;
+  }
+  .close-full-screen-image{
+    top: -15px;
+    right: -15px;
+  }
+  .image-details-column {
+    width: 100%;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 4px !important;
+    padding: 0px;
+    height: 100%;
+  }
+  .image-details-column table {
+    padding: 0px 24px;
+  }
+  .horizontal-line {
+    height: 3px;
+  }
+  .color-palates {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 4px;
+    text-align: center;
+    padding: 16px 24px;
+  }
+  .color-Teal {
+    display: none !important;
+  }
+  .social-group {
+    gap: 10px;
+  }
+  .image-info {
+    font-size: 14px;
+  }
+  .image-info-notice {
+    font-size: 14px;
+
+    width: 75%;
+  }
+  .image-info,
+  .social-group {
+    padding: 12px 24px;
+  }
+}
